fix image and text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,8 @@ img{
 
 
   /* Requirement 9 code here -- Do not remove this comment. */
-#about, #clients, #method, #contact{
-  text-align: center;
+.text{
+  align-self: center;
   max-height: 40vh;
   overflow: scroll;
 }
@@ -151,7 +151,7 @@ img{
   }
 
   /* Requirement 15 code here -- Do not remove this comment. */
-  img{
+  .about-image, .clients-image, .contact-image, .method-image{
     overflow: hidden;
   }
 }
